# InterfaceDesign

./: .gitignore  ComplexInfo.py  README.md  StructureInfo.py  hello.py  interface.ipynb  mpnn.py  pyproject.toml  utils.py
mpnn_output/: assigned_pdbs.jsonl  fixed_pdbs.jsonl  parsed_pdbs.jsonl
mpnn_output/probs/: pose_6M0J_mod_renum_AE_0001_renum_rel_0001_1_0001_renum.npz  pose_7Z0X_mod_rel_0002_1_0001_renum.npz  pose_holo_spike.npz
mpnn_output/seqs/: pose_6M0J_mod_renum_AE_0001_renum_rel_0001_1_0001_renum.fa  pose_7Z0X_mod_rel_0002_1_0001_renum.fa  pose_holo_spike.fa
pdb/: default.sc  relax.out  relax_6M0J.out  relax_top1.out  score.json
